Some layout changes, tg to tl.

--- a/org/troikalearning/troikalearning/static/css/tl.less
+++ b/org/troikalearning/troikalearning/static/css/tl.less
@@ -1,55 +1,73 @@
 body {
   padding-top: 60px;
 }
-.tg-page {
+
+.tl-page{
   margin-left: auto;
   margin-right: auto;
 }
-.tg-heading,
-.tg-message {
+
+.tl-heading, .tl-message{
   text-align: center;
 }
-.tg-group {
+
+.tl-group{
   border: 1px solid #E5E5E5;
   border-radius: 4px 4px 4px 4px;
   padding: 8px 8px 8px 8px;
 }
-.tg-anchor {
-  padding-top: 40px;
+
+.tl-anchor {
+  padding-top: 40px; 
   margin-top: -40px;
 }
-@media (min-width: 980px) {
-  .tg-heading {
+
+@media (min-width : 980px) {
+  .tl-heading {
     padding-top: 3em;
     padding-bottom: 2em;
   }
 }
-@media (max-width: 979px) {
+
+@media (max-width : 979px) {
   body {
     padding-top: 0px;
   }
 }
-.tg-integer {
+
+.tl-integer {
   width: 2em;
 }
-ul.tg-troika-headers {
+
+.tl-radio input {
+  clear: left;
+  display: block;
+  float: left;
+  margin-right: 1em;
+}
+
+ul.tl-troika-headers {
   list-style-image: none;
   list-style-type: none;
   margin-left: 0;
 }
-li.tg-troika-header {
+
+li.tl-troika-header {
   border: 1px solid #E5E5E5;
   padding: 8px 8px 8px 8px;
   margin-top: 0.5em;
 }
+
 .accordion-inner {
   padding-left: 0.5em;
   padding-right: 0.5em;
   padding-bottom: 0;
 }
-.tg-input-description {
-  margin-top: 0;
+
+.tl-input-description {
+  margin-top:0;
 }
-.tg-logo {
+
+.tl-logo {
   padding-bottom: 1em;
 }
