--- a/org/troikalearning/troikalearning/templates/edit_troika.html
+++ b/org/troikalearning/troikalearning/templates/edit_troika.html
@@ -3,6 +3,8 @@
 {% block back_button %}
 <a href="/">Home</a>
 {% endblock %} 
+{% block subheading %} | {% if access == 'create' %}Create{% else %}Edit{% endif %}{% endblock %}
+
 {% block body %}
 <div class="container">
   <div class="row-fluid"> 
@@ -10,13 +12,13 @@
       <h2>Troika</h2>
       {% if troikaerrors %}
       {% for troikaerror in troikaerrors %}
-      <div class="alert alert-error tg-message">
+      <div class="alert alert-error tl-message">
         <button type="button" class="close" data-dismiss="alert">×</button>
         <strong>Error:</strong> {{ troikaerror }}
       </div>
       {% endfor %}
       {% endif %}
-      <form id="tg-troika" action="" method="POST">
+      <form id="tl-troika" action="" method="POST">
         {% if access == 'create' %}
             When you fill up this form you will become a
             creator for a new pending troika. The troika will
@@ -26,18 +28,23 @@
         {% endif %}  
         <dl>
           <dt>{{ troikaform.hidden_tag() }}</dt>
-          <dt>{{ troikaform.title.label }} {{ troikaform.title(class="tg-text-medium") }}</dt>
-          <dt>{{ troikaform.description.label }} {{ troikaform.description(class="tg-text-large") }}</dt>
-          <dt>{{ troikaform.address.label }} {{ troikaform.address(class="tg-text-medium") }}</dt>
-          <dt>{{ troikaform.address_addendum.label }} {{ troikaform.address_addendum(class="tg-text-medium") }}</dt>
-          <dt>{{ troikaform.start_date.label }} {{ troikaform.start_date(class="tg-date") }}</dt>
-          <dt>{{ troikaform.start_time_hours.label }} {{ troikaform.start_time_hours(class="tg-integer") }} {{ troikaform.start_time_minutes(class="tg-integer") }}</dt>
-          <dt>{{ troikaform.duration.label }} {{ troikaform.duration(class="tg-integer") }}</dt>
-          <dt>{{ troikaform.max_participants.label }} {{ troikaform.max_participants(class="tg-integer") }}</dt>
+          <dt>{{ troikaform.title.label }} {{ troikaform.title(class="tl-text-medium") }}</dt>
+          <dt>{{ troikaform.description.label }} {{ troikaform.description(class="tl-text-large", rows=10) }}</dt>
+          <dt>{{ troikaform.address.label }} {{ troikaform.address(class="tl-text-medium") }}</dt>
+          <dt>{{ troikaform.address_addendum.label }} {{ troikaform.address_addendum(class="tl-text-medium") }}</dt>
+          <dt>{{ troikaform.start_date.label }} {{ troikaform.start_date(class="tl-date") }}</dt>
+          <dt>{{ troikaform.start_time_hours.label }} {{ troikaform.start_time_hours(class="tl-integer") }} {{ troikaform.start_time_minutes(class="tl-integer") }}</dt>
+          <dt>{{ troikaform.duration.label }} {{ troikaform.duration(class="tl-integer") }}</dt>
+          <dt>{{ troikaform.max_participants.label }} {{ troikaform.max_participants(class="tl-integer") }}</dt>
           {% if access == 'create' %}
-          <dt>{{ troikaform.creator_is_lead.label }} {{ troikaform.creator_is_lead(class="tg-checkbox") }}</dt>
-          <h6 class="tg-input-description">Check this box if you will lead this troika. If you need someone 
-		else to lead, leave this box unchecked.</h6>
+          <dt class="tl-radio">{{ troikaform.creator_role.label }}
+		        {% for subfield in troikaform.creator_role %}
+				    <tr>
+				        <td>{{ subfield() }}</td>
+				        <td>{{ subfield.label }}</td>
+				    </tr>
+				{% endfor %}
+          </dt>
           <dt>
             <input type="submit" name="action" value="Create Troika">
           </dt>
