Added feedback form, changed Troika created to NOT NULL, refactored templates

--- a/org/troikalearning/troikalearning/templates/about.html
+++ b/org/troikalearning/troikalearning/templates/about.html
@@ -42,7 +42,7 @@
         <ol><li>a platform where people can arrange a learning session and</li>
         <li>a way to communicate this session forward to other people interested in 
         the topic.</li></ol>The purpose of Troika is to make these things possible 
-        with the minimum level of organization. A “troika” means a clique 
+        with the minimum level of organization. A 'troika' means a clique 
         of three. When three people gather together at Troika event, 
         the organized Troika will be considered as a great success!</p>
         <p>Troika builds on three simple premises:
@@ -65,10 +65,10 @@
           <ol>
             <li><a href="{{ url_for('login') }}" target="_blank">Register</a> as a user.</li>
             <li><a href="{{ url_for('troikas') }}" target="_blank">Browse</a> the list of active troika events 
-                on the front page and find the ones you’re interested in. If there is no troika 
+                on the front page and find the ones you're interested in. If there is no troika 
                 available on the topic you wish to learn, you may want 
                 <a href="{{ url_for('create_troika') }}" target="_blank">
-                set up your own “pending troika”</a> and leave to "I will lead this" unclicked
+                set up your own 'pending troika'</a> and leave to "I will lead this" unclicked
                 to request for someone else to lead the troika.</li>
             <li>Sign up for an interesting troika by clicking the appropriate join link 
                 on the troika description page.</li>
