--- a/org/troikalearning/troikalearning/templates/user.html
+++ b/org/troikalearning/troikalearning/templates/user.html
@@ -10,15 +10,24 @@
   <div class="row-fluid"> 
     <div class="span8 offset4">  
       <h2>User information</h2>
-      {% if usererrors %}
-      {% for usererror in usererrors %}
-      <div class="alert alert-error tl-message">
-        <button type="button" class="close" data-dismiss="alert">×</button>
-        <strong>Error:</strong> {{ usererror }}
-      </div>
-      {% endfor %}
-      {% endif %}
-      {% call macros.user_form(form=userform) %} {% endcall %}
+      {% call macros.handle_errors(errors=usererrors) %} {% endcall %}
+      <form id="tl-user" action="{{ url_for('user') }}" method="POST">
+        <dl>
+          <dt>{{ userform.hidden_tag() }}</dt>
+          <dt>{{ userform.first_name.label }} {{ userform.first_name() }}</dt>
+          <dt>{{ userform.last_name.label }} {{ userform.last_name() }}</dt>
+          <dt>{{ userform.alias.label }} {{ userform.alias() }}</dt>
+          {% call macros.handle_description() %} {% endcall %}
+          <dt>{{ userform.email.label }} {{ userform.email() }}</dt>
+          <dt>{{ userform.new_password.label }} {{ userform.new_password()
+            }}</dt>
+          <dt>{{ userform.new_confirm.label }} {{ userform.new_confirm() }}</dt>
+          <dt>{{ userform.password.label }} {{ userform.password() }}</dt>
+          <dt>
+            <input type="submit" value="Update">
+          </dt>
+        </dl>
+      </form>
     </div>
   </div>
 </div>
