--- a/org/troikalearning/troikalearning/templates/edit_troika.html
+++ b/org/troikalearning/troikalearning/templates/edit_troika.html
@@ -8,16 +8,9 @@
 {% block body %}
 <div class="container">
   <div class="row-fluid"> 
-    <div class="span8 offset4">  
+    <div class="span12">  
       <h2>Troika</h2>
-      {% if troikaerrors %}
-      {% for troikaerror in troikaerrors %}
-      <div class="alert alert-error tl-message">
-        <button type="button" class="close" data-dismiss="alert">×</button>
-        <strong>Error:</strong> {{ troikaerror }}
-      </div>
-      {% endfor %}
-      {% endif %}
+      {% call macros.handle_errors(errors=troikaerrors) %} {% endcall %}
       <form id="tl-troika" action="" method="POST">
         {% if access == 'create' %}
             When you fill up this form you will become a
