--- a/org/troikalearning/troikalearning/static/css/tl.css
+++ b/org/troikalearning/troikalearning/static/css/tl.css
@@ -13,6 +13,7 @@ body {
   border: 1px solid #E5E5E5;
   border-radius: 4px 4px 4px 4px;
   padding: 8px 8px 8px 8px;
+  margin-bottom: 16px;
 }
 .tl-anchor {
   padding-top: 40px;
