--- a/org/troikalearning/troikalearning/templates/layout.html
+++ b/org/troikalearning/troikalearning/templates/layout.html
@@ -57,11 +57,15 @@ $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
     <div class="container">
       <div class="span12">
           <!-- Flashed messages -->
-          {% for message in get_flashed_messages() %}
-          <div class="alert alert-success tl-message">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ message }}
-          </div>
+          {% for category, message in get_flashed_messages(with_categories=true) %}          
+            {% if category == "error" %}
+            <div class="alert alert-error tl-message">
+            {% else %}
+            <div class="alert alert-success tl-message">
+            {% endif %}
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              {% if category == "error" %}<strong>Error:</strong> {% endif %} {{ message }}
+            </div>
           {% endfor %}
         <!-- Page Content -->
         {% block body %} {% endblock %}
